--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "cors-anywhere": "^0.4.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "xml-js": "^1.6.11"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
